<resources>
    <string name="app_name">Bookd</string>
    <string name="coming_soon">Plan the perfect event</string>
    <string name="welcome">Welcome</string>
    <string name="browse">Browse</string>
    <string name="events">Events</string>
    <string name="query_hint">What do you need for your event?</string>
    <string name="business_image">Business Image</string>
    <string name="antoine_p_tisserie">Antoine Pâtisserie</string>
    <string name="samplePriceLevel">$$$</string>
    <string name="phone_number_408_372_4135">(408) 372-4135</string>
    <string name="search">Search</string>
    <string name="my_wedding">Wedding Reception</string>
    <string name="from_nov_5_to_nov_15_2016">Nov 5th to Nov 15th, 2016</string>
    <string name="add_event_title">Add some details</string>


    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu.</string>
    <string name="bookd_name">BB Cafe &amp; Cake Gallery</string>
    <string name="bookd_tagline">Custom cakes and pastries</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="name_event">What name of the event?</string>
    <string name="save">Save</string>
    <string name="create_event">Create Event</string>
    <string name="comments">Comments…</string>
    <string name="event_starts">When does it start?</string>
    <string name="pick_date">Pick a date</string>
    <string name="event_ends">When does it end?</string>
    <string name="search_hint">What do you need to book?</string>
    <string name="finish">Finish</string>


    <string name="show_reviews">Show Reviews</string>

    <string name="name_your_event">Name your event</string>
    <string name="swipe_instruction">SWIPE LEFT</string>
    <string name="create_event_step_1">What event are you having soon?</string>
    <string name="create_event_step_1_hint">birthday for Jim, my wedding, etc…</string>
    <string name="create_event_step_2">When is your event happening?</string>
    <string name="create_event_step_2_hint">Set a date and time</string>
    <string name="create_event_step_3">Who do you need to book?</string>
    <string name="create_event_step_3_hint">DJs? Photographers? Caterers?</string>
    <string name="create_event_step_4">Sounds fun! Let\'s get booking!</string>

    <string name="event_date">Set Date</string>
    <string name="back">Back</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="priceLabel">Price</string>
    <string name="ratingLabel">Rating</string>
    <string name="sort">Sort</string>
    <string name="distance">Distance</string>

    <string-array name="sort_options">
        <item>Rating</item>
        <item>Distance</item>
        <item>Price</item>
    </string-array>

    <string name="user_location">Location</string>
    <string name="user_about">About</string>
    <string name="user_phonenumber">Phone Number</string>
    <string name="dollar_sign">$$$$$</string>
    <string name="sample_rating">1.0</string>
    <string name="call">Call</string>
    <string name="featured_review">Featured Review</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>

    <string name="date">Date</string>
    <string name="bookings">Bookings</string>
    <string name="tags">Tags</string>
    <string name="reset">Reset</string>
    <string name="change">Change</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="no_bookings_yet">No Bookings Added</string>
    <string name="highest_pricing">$$$$$</string>
    <string name="book">Book</string>
    <string name="stripe_publishable_key">pk_live_aNtxbVn5nOGX8FAHkR9uQppV</string>
    <string name="stripe_version">2</string>
    <string name="unknown">Unknown</string>
    <string name="authentication_failed">Authentication failed. Please, try again.</string>
    <string name="check_network_conn">Check network connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="connecting_label">connecting…</string>
    <string name="background">Background</string>
    <string name="cake">Cake</string>
    <string name="creating_event">Creating event…</string>
    <string name="planned_events">Planned Events</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="when">When</string>
    <string name="loading">Loading</string>
    <string name="add">Add</string>
    <string name="tag_enter_hint">Tap enter to add one at a time and tap on tag to remove below</string>
    <string name="nothing_found">Nothing found.</string>
    <string name="location">Location</string>


</resources>
