<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/advanced_search_bg">

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/priceLabel" />

    <SeekBar
        android:id="@+id/priceSeekBar"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/priceLabel"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/priceIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/priceSeekBar"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/dollar_sign"
        tools:text="$$$" />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceSeekBar"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/ratingLabel" />

    <SeekBar
        android:id="@+id/ratingSeekBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/ratingLabel"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/ratingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/ratingSeekBar"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/sample_rating" />

    <TextView
        android:id="@+id/sortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingSeekBar"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sort" />

    <RadioGroup
        android:id="@+id/sortByRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sortLabel"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/byRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ratingLabel" />

        <RadioButton
            android:id="@+id/byPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/priceLabel" />

        <RadioButton
            android:id="@+id/byDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/distance" />

    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        style="@style/SearchButton"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/sortByRadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/search"
        android:textAllCaps="false" />

</RelativeLayout>