<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginStart="2dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/businessImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/business_image"
            android:scaleType="centerCrop"
            android:transitionName="businessImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shade_bg" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/ivFavorite"
            android:layout_toStartOf="@id/ivFavorite"
            android:minHeight="50dp"
            android:text="@string/antoine_p_tisserie"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="title" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/title"
            android:layout_below="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            tools:text="Downtown 185 Park Ave San Jose, CA 95113"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:transitionName="subtitle" />

        <com.whinc.widget.ratingbar.RatingBar
            android:id="@+id/rating"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/title"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/title"
            app:rb_count="3"
            app:rb_fill="@drawable/fill"
            app:rb_max_count="5" />

        <TextView
            android:id="@+id/priceLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rating"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:text="@string/samplePriceLevel"
            android:textColor="@color/price"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/addButton"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/add"
            android:src="@drawable/add" />

    </RelativeLayout>

</android.support.v7.widget.CardView>